// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button render disabled 1`] = `
<DocumentFragment>
  <button
    class="sc-braxZu dCynAv"
    disabled=""
    variant="secondary"
  />
</DocumentFragment>
`;

exports[`Button render primary small 1`] = `
<DocumentFragment>
  <button
    class="sc-braxZu fcEAvZ"
    variant="primary"
  />
</DocumentFragment>
`;

exports[`Button render tertiary large 1`] = `
<DocumentFragment>
  <button
    class="sc-braxZu gpPWwK"
    variant="tertiary"
  />
</DocumentFragment>
`;
